--- a/project/ISO5259/5259-2-cheetsheet-01.html
+++ b/project/ISO5259/5259-2-cheetsheet-01.html
@@ -331,7 +331,7 @@
                 <h3 class="themeable-heading text-2xl mt-8 mb-4">1.1. 전략적 중요성</h3>
                 <div class="themeable-card p-6 rounded-lg border mb-6 interactive-card">
                     <p class="text-base leading-relaxed">
-                        '내재적 데이터 품질 특성'은 데이터가 특정 시스템이나 응용 프로그램과 무관하게, 데이터 자체로서 본질적으로 지니는 속성을 의미합니다. 이는 단순히 사전 검토 항목이 아니라, 데이터 무결성의 초석입니다. 이 기반이 부실할 경우, 즉 데이터가 부정확하거나(<strong>정확성</strong>), 불완전하거나(<strong>완전성</strong>), 모순된다면(<strong>일관성</strong>) 그 결함은 프로젝트 전반에 걸쳐 연쇄적인 실패를 유발합니다. 이는 결국 막대한 비용의 재작업으로 이어지며, 근본적으로 신뢰할 수 없는 AI 모델을 양산하는 원인이 됩니다. 따라서 내재적 품질 관리를 소홀히 하는 것은 해결해야 할 기술적 과제인 '데이터 부채(data debt)'를 의도적으로 쌓는 것과 같으며, 이는 모든 AI 이니셔티브의 성공을 위협하는 가장 큰 리스크입니다.
+                        '내재적 데이터 품질 특성'은 시스템이나 프로그램과 상관없이 데이터 자체가 가진 기본 속성입니다. 이는 단순한 체크 항목이 아니라 데이터 무결성의 출발점입니다. 만약 이 기반이 부실하면, 즉 데이터가 부정확하거나(<strong>정확성</strong>), 불완전하거나(<strong>완전성</strong>), 서로 모순된다면(<strong>일관성</strong>) 그 문제가 프로젝트 전체로 퍼져 나갑니다. 결국 엄청난 재작업 비용이 들고, 믿을 수 없는 AI 모델만 쏟아져 나옵니다. 따라서 내재적 품질 관리를 소홀히 하는 것은 나중에 반드시 갚아야 할 '데이터 부채(data debt)'를 일부러 쌓는 것과 같습니다. 이는 모든 AI 프로젝트의 성공을 가로막는 가장 큰 위험 요소입니다.
                     </p>
                 </div>
 
@@ -388,7 +388,7 @@
                 <h3 class="themeable-heading text-2xl mt-8 mb-4">2.1. 전략적 중요성</h3>
                 <div class="themeable-card p-6 rounded-lg border mb-6 interactive-card">
                     <p class="text-base leading-relaxed">
-                        '내재적 및 시스템 의존적 특성'은 데이터 자체의 속성과 이를 저장, 처리, 활용하는 시스템의 상호작용에 의해 결정되는 품질 차원입니다. 데이터가 아무리 정확하더라도(내재적 품질), 그 가치는 비즈니스 환경에서의 활용 가능성에 의해 결정됩니다. 예를 들어, 데이터에 대한 접근성이 낮으면(<strong>Acs-ML-3</strong>) 데이터 과학팀의 개발 속도를 저하시켜 AI 제품의 시장 출시(Time-to-market)를 직접적으로 지연시킵니다. 데이터 처리 효율성이 낮거나(<strong>Eff-ML</strong>), 공간 낭비 위험이 크다면(<strong>Eff-ML-3</strong>) 이는 즉각적인 클라우드 컴퓨팅 비용 증가와 투자수익률(ROI) 악화로 이어집니다. 따라서 이 특성들은 데이터의 잠재적 가치를 실질적인 비즈니스 성과로 전환하는 데 있어 핵심적인 관리 지표이며, 이를 무시하는 것은 곧 경쟁 우위를 포기하는 것과 같습니다.
+                        '내재적 및 시스템 의존적 특성'은 데이터 자체의 속성과 이를 저장·처리·활용하는 시스템이 합쳐져서 만들어지는 품질입니다. 데이터가 아무리 정확해도(내재적 품질), 실제 가치는 비즈니스 현장에서 얼마나 잘 활용할 수 있느냐에 달려 있습니다. 예를 들어, 데이터 접근성이 떨어지면(<strong>Acs-ML-3</strong>) 데이터 과학팀의 개발이 느려져서 AI 제품 출시가 늦어집니다. 데이터 처리 효율이 낮거나(<strong>Eff-ML</strong>), 저장 공간 낭비가 심하면(<strong>Eff-ML-3</strong>) 클라우드 비용이 바로 치솟고 투자 대비 수익(ROI)도 나빠집니다. 그래서 이 특성들은 데이터가 가진 잠재력을 실제 비즈니스 성과로 바꾸는 핵심 관리 지표입니다. 이를 무시하는 것은 경쟁 우위를 스스로 포기하는 것과 같습니다.
                     </p>
                 </div>
 
@@ -439,7 +439,7 @@
                 <h3 class="themeable-heading text-2xl mt-8 mb-4">3.1. 전략적 중요성</h3>
                 <div class="themeable-card p-6 rounded-lg border mb-6">
                     <p class="text-base leading-relaxed">
-                        '시스템 의존적 데이터 품질 특성'은 전적으로 데이터를 저장, 전송, 처리하는 IT 인프라의 성능과 아키텍처에 의해 좌우되는 품질 지표입니다. 데이터 기반 서비스의 신뢰성은 시스템의 안정성에 달려 있습니다. 데이터가 필요할 때 시스템 장애 없이 즉시 사용할 수 있는지(<strong>가용성</strong>), 다른 환경으로 쉽게 이전할 수 있는지(<strong>이식성</strong>), 그리고 재해 발생 시 신속하게 복구할 수 있는지(<strong>복구 가능성</strong>)는 비즈니스 연속성 계획(BCP)의 핵심 요소입니다. 이 특성들은 데이터 자산의 기술적 견고함을 나타내며, 안정적인 운영 리스크 관리의 핵심입니다. 특히 AI 및 ML 모델의 성능과 직결되는 추가적인 데이터 품질 특성을 평가하기 위해서는 이러한 시스템적 기반이 반드시 선행되어야 합니다.
+                        '시스템 의존적 데이터 품질 특성'은 데이터를 저장·전송·처리하는 IT 인프라의 성능과 구조에 완전히 좌우되는 품질 지표입니다. 데이터 기반 서비스를 신뢰할 수 있으려면 시스템이 안정적이어야 합니다. 필요할 때 장애 없이 바로 쓸 수 있는지(<strong>가용성</strong>), 다른 환경으로 쉽게 옮길 수 있는지(<strong>이식성</strong>), 장애가 생겨도 빠르게 복구할 수 있는지(<strong>복구 가능성</strong>)는 비즈니스 연속성(BCP)의 핵심입니다. 이 특성들은 데이터 자산이 기술적으로 얼마나 튼튼한지를 보여주며, 안정적인 운영을 위한 필수 요소입니다. 특히 AI/ML 모델 성능에 영향을 주는 추가 데이터 품질 특성을 평가하려면 이런 시스템 기반이 먼저 갖춰져야 합니다.
                     </p>
                 </div>
 
@@ -477,7 +477,7 @@
                 <h3 class="themeable-heading text-2xl mt-8 mb-4">4.1. 전략적 중요성</h3>
                 <div class="themeable-card p-6 rounded-lg border mb-6 interactive-card">
                     <p class="text-base leading-relaxed">
-                        '추가 데이터 품질 특성'은 더 이상 선택적이거나 부수적인 요소가 아닙니다. 이들은 공정하고, 견고하며, 일반화 가능한 AI 시스템을 구축하기 위한 <strong>핵심적이고 정의적인 특성</strong>입니다. 이 지표들은 데이터셋이 목표 현실 세계를 얼마나 충실히 반영하는지, 즉 <strong>충실도(Fidelity)</strong> (<strong>Bal-ML</strong>), 목표 모집단을 충분히 대변하는지(<strong>Rep-ML-1</strong>), 다양한 시나리오를 포함하는지(<strong>다양성</strong>)는 모델의 성능을 넘어 사회적 책무와 직결됩니다. 이 영역에서의 실패는 단순히 성능 저하에 그치지 않고, 편향되거나 비대표적인 모델로 인해 심각한 평판 및 법적 리스크를 초래할 수 있습니다. 따라서 이 특성들은 현대 AI 프로젝트의 성공과 실패를 가르는 가장 중요한 기준점입니다.
+                        '추가 데이터 품질 특성'은 선택 사항이 아닙니다. 공정하고 안정적이며 실전에서 제대로 작동하는 AI를 만들려면 <strong>반드시 갖춰야 할 핵심 요소</strong>입니다. 이 지표들은 데이터셋이 실제 세계를 얼마나 제대로 담고 있는지(<strong>균형</strong>, <strong>Bal-ML</strong>), 목표 집단을 충분히 반영하는지(<strong>대표성</strong>, <strong>Rep-ML-1</strong>), 다양한 상황을 포괄하는지(<strong>다양성</strong>)를 측정합니다. 이는 단순히 모델 성능 문제가 아니라 사회적 책임과 직결된 문제입니다. 만약 이 부분에서 실패하면 성능이 떨어지는 것은 물론, 편향되거나 특정 집단만 반영한 모델 때문에 회사 평판이 추락하고 법적 문제까지 생길 수 있습니다. 그래서 이 특성들은 AI 프로젝트의 성공과 실패를 가르는 가장 중요한 기준입니다.
                     </p>
                 </div>
 
