--- a/project/CURK/Mini-Project/CURK-2025-09-29/index_new.html
+++ b/project/CURK/Mini-Project/CURK-2025-09-29/index_new.html
@@ -205,10 +205,12 @@
     ================================================================== -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         
-    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 lg:grid lg:grid-cols-4 lg:gap-8">
-        
+    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 max-w-[1400px]">
+        <!-- Flex Layout for TOC + Content -->
+        <div class="lg:flex lg:gap-8 lg:justify-center lg:items-start">
+
         <!-- Table of Contents Sidebar (Desktop) -->
-        <nav class="hidden lg:block lg:col-span-1 sticky top-20 self-start h-auto pr-4">
+        <nav class="hidden lg:block lg:w-[240px] lg:shrink-0 sticky top-20 self-start">
             <h3 class="font-bold themeable-heading mb-4 text-lg">목차</h3>
             <ul id="toc-links" class="space-y-3 text-sm border-l-2 themeable-toc-border">
                 <li><a href="#intro" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">소개</a></li>
@@ -243,7 +245,7 @@
         </nav>
 
         <!-- Main Content Area -->
-        <main class="lg:col-span-3">
+        <main class="max-w-[800px] px-4 sm:px-6">
 
             <a href="https://pebblous.ai" target="_blank" rel="noopener noreferrer">
                 <img id="page-logo" src="https://blog.pebblous.ai/image/Pebblous_BM_Orange_RGB.png" alt="Pebblous 로고" class="h-8 w-auto">
@@ -460,6 +462,8 @@
             </p>
         </section>
     </main>
+    </div><!-- End Flex Layout -->
+    </div>
 
     <!-- Footer Component (loaded dynamically) -->
     <div id="footer-placeholder"></div>
