--- a/project/ISO25024/iso-25024-test-01.html
+++ b/project/ISO25024/iso-25024-test-01.html
@@ -648,7 +648,7 @@ FROM Inventory;
                 publishDate: "2025년 10월 26일",
                 publisher: "페블러스 데이터 커뮤니케이션 팀",
                 pageTitle: "ISO/IEC 25024 데이터 품질 측정 실습 | Pebblous Blog",
-                defaultTheme: "dark",
+                defaultTheme: "light",
 
                 // SEO Phase 2: Related Posts & Breadcrumbs
                 category: "story",
