--- a/project/ISO5259/5259-pbls-dataclinic-01.html
+++ b/project/ISO5259/5259-pbls-dataclinic-01.html
@@ -137,9 +137,11 @@
     <!-- Header placeholder (common-utils.js will load header) -->
     <div id="header-placeholder"></div>
 
-    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 lg:grid lg:grid-cols-4 lg:gap-8">
-        <!-- Desktop TOC Sidebar -->
-        <nav class="hidden lg:block lg:col-span-1 sticky-toc">
+    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 max-w-[1400px]">
+        <!-- Flex Layout for TOC + Content -->
+        <div class="lg:flex lg:gap-8 lg:justify-center lg:items-start">
+        <!-- Desktop TOC Sidebar (sticky, left of content) -->
+        <nav class="hidden lg:block lg:w-[240px] lg:shrink-0 sticky-toc">
             <div class="bg-slate-800/30 border border-slate-700 rounded-lg p-6">
                 <h3 class="text-lg font-semibold text-white mb-4">목차</h3>
                 <ul id="toc-links" class="space-y-3 text-sm">
@@ -158,7 +160,7 @@
         </nav>
 
         <!-- Main Content -->
-        <main class="lg:col-span-3">
+        <main class="max-w-[800px] px-4 sm:px-6">
             <!-- Mobile TOC -->
             <div class="lg:hidden mb-8">
                 <details class="bg-slate-800/30 border border-slate-700 rounded-lg p-4">
@@ -886,6 +888,7 @@
                 <div id="comments"></div>
             </article>
         </main>
+        </div><!-- End Flex Layout -->
     </div>
 
     <!-- Footer placeholder (common-utils.js will load footer) -->
@@ -923,7 +926,7 @@
                 category: "tech",
                 articlePath: "project/ISO5259/5259-pbls-dataclinic-01.html",
                 tags: ["ISO 5259", "ISO/IEC 5259", "AI Data Quality", "Data Quality", "DataClinic", "데이터클리닉", "QM", "Quality Measure", "AI 표준", "데이터 거버넌스"],
-                defaultTheme: "dark",
+                defaultTheme: "light",
                 faqs: [
                     {
                         question: "ISO/IEC 5259란 무엇이며, 왜 중요한가요?",
