--- a/project/PhysicalAI/data-startup-physical-ai-01.html
+++ b/project/PhysicalAI/data-startup-physical-ai-01.html
@@ -212,25 +212,28 @@
     <div id="header-placeholder"></div>
 
     <!-- Main Container with Sidebar -->
-    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 lg:grid lg:grid-cols-4 lg:gap-8">
+    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 max-w-[1400px]">
 
-        <!-- Desktop TOC Sidebar -->
-        <nav class="hidden lg:block lg:col-span-1 sticky top-20 self-start h-auto pr-4">
-            <h3 class="font-bold themeable-heading mb-4 text-lg">목차</h3>
-            <ul id="toc-links" class="space-y-3 text-sm border-l-2 themeable-toc-border">
-                <li><a href="#summary" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">초록</a></li>
-                <li><a href="#section-1" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">1. 국가 전략</a></li>
-                <li><a href="#section-2" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">2. AI-Ready Data</a></li>
-                <li><a href="#section-3" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">3. 협력 생태계</a></li>
-                <li><a href="#section-4" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">4. 페블러스 사례</a></li>
-                <li><a href="#section-5" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">5. 정책 제언</a></li>
-                <li><a href="#conclusion" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">6. 결론</a></li>
-                <li><a href="#pdf-download" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">PDF 다운로드</a></li>
-            </ul>
-        </nav>
+        <!-- Flex Layout for TOC + Content -->
+        <div class="lg:flex lg:gap-8 lg:justify-center lg:items-start">
 
-        <!-- Main Content -->
-        <main class="lg:col-span-3">
+            <!-- Desktop TOC Sidebar (sticky, left of content) -->
+            <nav class="hidden lg:block lg:w-[240px] lg:shrink-0 sticky top-20 self-start">
+                <h3 class="font-bold themeable-heading mb-4 text-lg">목차</h3>
+                <ul id="toc-links" class="space-y-3 text-sm border-l-2 themeable-toc-border">
+                    <li><a href="#summary" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">초록</a></li>
+                    <li><a href="#section-1" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">1. 국가 전략</a></li>
+                    <li><a href="#section-2" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">2. AI-Ready Data</a></li>
+                    <li><a href="#section-3" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">3. 협력 생태계</a></li>
+                    <li><a href="#section-4" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">4. 페블러스 사례</a></li>
+                    <li><a href="#section-5" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">5. 정책 제언</a></li>
+                    <li><a href="#conclusion" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">6. 결론</a></li>
+                    <li><a href="#pdf-download" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">PDF 다운로드</a></li>
+                </ul>
+            </nav>
+
+            <!-- Main Content (centered with max-width) -->
+            <main class="max-w-[800px] px-4 sm:px-6">
 
         <!-- Hero Section -->
         <header class="text-center mb-16">
@@ -886,6 +889,7 @@
         </section>
 
         </main>
+        </div><!-- End Flex Layout -->
     </div>
 
     <!-- Mobile TOC Toggle Button -->
@@ -965,7 +969,7 @@
                 category: "tech",
                 articlePath: "project/PhysicalAI/data-startup-physical-ai-01.html",
                 tags: ["피지컬 AI", "Physical AI", "AI Startups", "National Strategy", "AI-Ready Data", "Data Ecosystem", "Policy", "Data-Centric AI", "Industrial AI", "Global Competitiveness"],
-                defaultTheme: "dark",
+                defaultTheme: "light",
                 faqs: [
                     {
                         question: "피지컬 AI(Physical AI)란 무엇이며, 기존 AI와 어떻게 다른가요?",
