--- a/project/SyntheticData/synthetic-data-pricing-01.html
+++ b/project/SyntheticData/synthetic-data-pricing-01.html
@@ -252,10 +252,12 @@
     <div id="header-placeholder"></div>
 
     <!-- Main Container with Sidebar -->
-    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 lg:grid lg:grid-cols-4 lg:gap-8">
+    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 max-w-[1400px]">
+        <!-- Flex Layout for TOC + Content -->
+        <div class="lg:flex lg:gap-8 lg:justify-center lg:items-start">
 
-        <!-- Desktop TOC Sidebar -->
-        <nav class="hidden lg:block lg:col-span-1 sticky top-20 self-start h-auto pr-4">
+        <!-- Desktop TOC Sidebar (sticky, left of content) -->
+        <nav class="hidden lg:block lg:w-[240px] lg:shrink-0 sticky top-20 self-start">
             <h3 class="font-bold themeable-heading mb-4 text-lg">목차</h3>
             <ul id="toc-links" class="space-y-3 text-sm border-l-2 themeable-toc-border">
                 <li><a href="#summary" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">초록</a></li>
@@ -273,7 +275,7 @@
         </nav>
 
         <!-- Main Content -->
-        <main class="lg:col-span-3">
+        <main class="max-w-[800px] px-4 sm:px-6">
 
         <!-- Hero Section -->
         <header class="text-center mb-16">
@@ -1111,6 +1113,7 @@
         <!-- Comments section will be auto-injected by common-utils.js -->
 
         </main>
+        </div><!-- End Flex Layout -->
     </div>
 
     <!-- Mobile TOC Toggle Button -->
@@ -1190,7 +1193,7 @@
                 publishDate: "2025년 11월 7일",
                 publisher: "(주)페블러스 데이터 커뮤니케이션팀",
                 pageTitle: "2025년 글로벌 합성데이터 가격 전략 분석 | Pebblous Blog",
-                defaultTheme: "dark",
+                defaultTheme: "light",
                 commentsMessage: "합성데이터 가격 정책에 대한 질문이나 의견이 있으신가요?",
                 // SEO Phase 2: Breadcrumbs & Related Posts
                 category: "story",
