--- a/report/llm-dataset-guide-2025-10-16/ko/index.html
+++ b/report/llm-dataset-guide-2025-10-16/ko/index.html
@@ -533,7 +533,7 @@
                 pageTitle: "LLM 학습용 오픈 데이터셋 가이드: 저작권 문제 없는 AI 및 데이터과학 분야를 중심으로 | Pebblous",
                 publishDate: "2025년 10월 16일",
                 publisher: "페블러스 데이터 커뮤니케이션 팀",
-                defaultTheme: "dark",
+                defaultTheme: "light",
 
                 // SEO Phase 2: Related Posts & Breadcrumbs
                 category: "story",
