--- a/project/CURK/Mini-Project/CURK-2025-09-29/index.html
+++ b/project/CURK/Mini-Project/CURK-2025-09-29/index.html
@@ -436,10 +436,12 @@
     <!-- Header Component Placeholder -->
     <div id="header-placeholder"></div>
 
-    <div id="app" class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 lg:grid lg:grid-cols-4 lg:gap-8">
+    <div id="app" class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 max-w-[1400px]">
+        <!-- Flex Layout for TOC + Content -->
+        <div class="lg:flex lg:gap-8 lg:justify-center lg:items-start">
 
         <!-- Table of Contents Sidebar (Desktop) -->
-        <nav class="hidden lg:block lg:col-span-1 sticky top-20 self-start h-auto pr-4">
+        <nav class="hidden lg:block lg:w-[240px] lg:shrink-0 sticky top-20 self-start">
             <h3 class="font-bold themeable-heading mb-4 text-lg">목차</h3>
             <ul id="toc-links" class="space-y-3 text-sm border-l-2 themeable-toc-border">
                 <li><a href="#intro" class="block pl-4 -ml-px border-l-2 themeable-toc-link">소개</a></li>
@@ -453,7 +455,7 @@
         </nav>
 
         <!-- Main Content -->
-        <main class="lg:col-span-3">
+        <main class="max-w-[800px] px-4 sm:px-6">
             <!-- Title Section -->
             <section id="intro" class="mb-16 text-center">
                 <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-6 themeable-heading">벡터 임베딩과 지식 그래프의 만남</h1>
@@ -1086,6 +1088,7 @@
                 </p>
             </section>
         </main>
+        </div><!-- End Flex Layout -->
     </div>
 
     <!-- Footer Component -->
