--- a/project/CURK/Mini-Project/CURK-2025-09-29/pbls-embedding+ontoloyg-01.html
+++ b/project/CURK/Mini-Project/CURK-2025-09-29/pbls-embedding+ontoloyg-01.html
@@ -242,9 +242,9 @@
     <!-- Header Placeholder -->
     <div id="header-placeholder"></div>
 
-    <div id="app" class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 lg:grid lg:grid-cols-4 lg:gap-8">
+    <div id="app" class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 max-w-[1400px]">
 
-        <div class="lg:col-span-4">
+        <div>
             <header class="text-center mb-16">
                 <h1 id="page-h1-title" class="text-3xl md:text-4xl font-bold leading-snug themeable-heading">AI 지식 표현의 융합: 벡터 임베딩과 지식 그래프</h1>
                 <div id="page-meta-info" class="mt-4 text-sm">
@@ -255,7 +255,10 @@
             </header>
         </div>
 
-        <nav class="hidden lg:block lg:col-span-1 sticky top-20 self-start h-auto pr-4">
+        <!-- Flex Layout for TOC + Content -->
+        <div class="lg:flex lg:gap-8 lg:justify-center lg:items-start">
+
+        <nav class="hidden lg:block lg:w-[240px] lg:shrink-0 sticky top-20 self-start">
             <h3 class="font-bold themeable-heading mb-4 text-lg">목차</h3>
             <ul id="toc-links" class="space-y-3 text-sm border-l-2 themeable-toc-border">
                 <li><a href="#intro" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">개요</a></li>
@@ -267,7 +270,7 @@
             </ul>
         </nav>
 
-        <main class="lg:col-span-3">
+        <main class="max-w-[800px] px-4 sm:px-6">
             <!-- Article Content Starts Here -->
 
             <section id="intro" class="mb-12">
@@ -431,6 +434,7 @@
                 </div>
             </section>
         </main>
+        </div><!-- End Flex Layout -->
 
     </div>
 
