--- a/project/DataClinic/ai-data-qa-framework-01.html
+++ b/project/DataClinic/ai-data-qa-framework-01.html
@@ -230,10 +230,12 @@
     <div id="header-placeholder"></div>
 
     <!-- Main Container with Sidebar -->
-    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 lg:grid lg:grid-cols-4 lg:gap-8">
+    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 max-w-[1400px]">
+        <!-- Flex Layout for TOC + Content -->
+        <div class="lg:flex lg:gap-8 lg:justify-center lg:items-start">
 
-        <!-- Desktop TOC Sidebar -->
-        <nav class="hidden lg:block lg:col-span-1 sticky top-20 self-start h-auto pr-4">
+        <!-- Desktop TOC Sidebar (sticky, left of content) -->
+        <nav class="hidden lg:block lg:w-[240px] lg:shrink-0 sticky top-20 self-start">
             <h3 class="font-bold themeable-heading mb-4 text-lg">목차</h3>
             <ul id="toc-links" class="space-y-3 text-sm border-l-2 themeable-toc-border">
                 <li><a href="#summary" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">초록</a></li>
@@ -250,7 +252,7 @@
         </nav>
 
         <!-- Main Content -->
-        <main class="lg:col-span-3">
+        <main class="max-w-[800px] px-4 sm:px-6">
 
         <!-- Hero Section -->
         <header class="text-center mb-16">
@@ -1029,6 +1031,7 @@
         </section>
 
         </main>
+        </div><!-- End Flex Layout -->
     </div>
 
     <!-- Scroll to Top Button -->
@@ -1053,7 +1056,7 @@
                 publishDate: "2025년 9월 25일",
                 publisher: "(주)페블러스 데이터 커뮤니케이션팀",
                 pageTitle: "AI 데이터 품질 평가 프레임워크: 신뢰할 수 있는 AI를 위한 6가지 접근법 | Pebblous Blog",
-                defaultTheme: "dark",
+                defaultTheme: "light",
 
                 // SEO Phase 2: Related Posts & Breadcrumbs
                 category: "tech",
