--- a/project/IR/PBLS-IR-Physical-AI-01.html
+++ b/project/IR/PBLS-IR-Physical-AI-01.html
@@ -348,10 +348,12 @@
         <div id="header-placeholder"></div>
 
         <!-- Main Container with Sidebar -->
-        <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 lg:grid lg:grid-cols-4 lg:gap-8">
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 max-w-[1400px]">
+            <!-- Flex Layout for TOC + Content -->
+            <div class="lg:flex lg:gap-8 lg:justify-center lg:items-start">
 
-            <!-- Desktop TOC Sidebar -->
-            <nav class="hidden lg:block lg:col-span-1 sticky top-20 self-start h-auto pr-4">
+            <!-- Desktop TOC Sidebar (sticky, left of content) -->
+            <nav class="hidden lg:block lg:w-[240px] lg:shrink-0 sticky top-20 self-start">
                 <h3 class="font-bold themeable-heading mb-4 text-lg">목차</h3>
                 <ul id="toc-links" class="space-y-3 text-sm border-l-2 themeable-toc-border">
                     <li><a href="#summary" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">요약</a></li>
@@ -366,7 +368,7 @@
             </nav>
 
             <!-- Main Content -->
-            <main class="lg:col-span-3">
+            <main class="max-w-[800px] px-4 sm:px-6">
 
                 <!-- Hero Section -->
                 <header class="text-center mb-16">
@@ -1529,7 +1531,7 @@
                 </section>
 
             </main>
-
+            </div><!-- End Flex Layout -->
         </div>
 
         <!-- Mobile TOC Toggle -->
