--- a/project/ISO5259/5259-pbls-dataclinic-02.html
+++ b/project/ISO5259/5259-pbls-dataclinic-02.html
@@ -166,10 +166,12 @@
     <!-- Header Component Placeholder -->
     <div id="header-placeholder"></div>
 
-    <div id="app" class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 lg:grid lg:grid-cols-4 lg:gap-8">
+    <div id="app" class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 max-w-[1400px]">
+        <!-- Flex Layout for TOC + Content -->
+        <div class="lg:flex lg:gap-8 lg:justify-center lg:items-start">
 
-        <!-- Desktop TOC -->
-        <nav class="hidden lg:block lg:col-span-1 sticky top-20 self-start h-auto pr-4">
+        <!-- Desktop TOC Sidebar (sticky, left of content) -->
+        <nav class="hidden lg:block lg:w-[240px] lg:shrink-0 sticky top-20 self-start">
             <h3 class="font-bold themeable-heading mb-4 text-lg">목차</h3>
             <ul id="toc-links" class="space-y-3 text-sm border-l-2 themeable-toc-border">
                 <li><a href="#intro" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">초록</a></li>
@@ -184,7 +186,7 @@
             </ul>
         </nav>
 
-        <main class="lg:col-span-3">
+        <main class="max-w-[800px] px-4 sm:px-6">
             <!-- Title Section -->
             <section class="mb-8 text-center">
                 <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold leading-tight mb-4"></h1>
@@ -893,6 +895,7 @@
             <!-- Comments Section (giscus) -->
             <div id="comments"></div>
         </main>
+        </div><!-- End Flex Layout -->
     </div>
 
     <!-- Pebblous Footer Component -->
@@ -915,7 +918,7 @@
                 pageTitle: "AI 데이터 품질 표준과 페블러스 데이터클리닉: ISO/IEC 5259-2 정량적 매핑 | Pebblous",
                 publishDate: "2025년 11월 16일",
                 publisher: "페블러스 데이터 커뮤니케이션 팀",
-                defaultTheme: "dark",
+                defaultTheme: "light",
 
                 // SEO Phase 2: Related Posts & Breadcrumbs
                 category: "tech",
