--- a/project/ISO5259/5259_text_qa.html
+++ b/project/ISO5259/5259_text_qa.html
@@ -91,9 +91,11 @@
     <!-- Header Component Placeholder -->
     <div id="header-placeholder"></div>
 
-    <div id="app" class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 lg:grid lg:grid-cols-4 lg:gap-8">
+    <div id="app" class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 max-w-[1400px]">
+        <!-- Flex Layout for TOC + Content -->
+        <div class="lg:flex lg:gap-8 lg:justify-center lg:items-start">
 
-        <nav class="hidden lg:block lg:col-span-1 sticky top-20 self-start h-auto pr-4">
+        <nav class="hidden lg:block lg:w-[240px] lg:shrink-0 sticky top-20 self-start">
             <h3 class="font-bold themeable-heading mb-4 text-lg">목차</h3>
             <ul id="toc-links" class="space-y-3 text-sm border-l-2 themeable-toc-border">
                 <li><a href="#summary" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">요약</a></li>
@@ -105,7 +107,7 @@
             </ul>
         </nav>
 
-        <main class="lg:col-span-3">
+        <main class="max-w-[800px] px-4 sm:px-6">
             <!-- Article Content Starts Here -->
 
             <!-- Title Section -->
@@ -434,6 +436,7 @@
                 </div>
             </section>
         </main>
+        </div><!-- End Flex Layout -->
     </div>
 
     <!-- Pebblous Footer Component -->
@@ -478,7 +481,7 @@
                 pageTitle: "ISO/IEC 5259 표준 기반 LLM 텍스트 데이터 품질 평가 | Pebblous",
                 publishDate: "2025년 10월 23일",
                 publisher: "페블러스 데이터 커뮤니케이션 팀",
-                defaultTheme: "dark",
+                defaultTheme: "light",
 
                 // SEO Phase 2: Related Posts & Breadcrumbs
                 category: "story",
