--- a/project/ISO5259/5259-2-cheetsheet-01.html
+++ b/project/ISO5259/5259-2-cheetsheet-01.html
@@ -753,7 +753,7 @@
                 // SEO Phase 2: Related Posts & Breadcrumbs
                 category: "story",
                 articlePath: "project/ISO5259/5259-2-cheetsheet-01.html",
-                tags: ["ISO 5259-2", "Data Quality", "Quality Measures", "AI", "ML", "Standards"],
+                tags: ["ISO 5259", "ISO/IEC 5259-2", "Data Quality", "Quality Measures", "AI", "ML", "Standards"],
 
                 // SEO Phase 3: FAQ Schema
                 faqs: [
