--- a/project/ISO5259/5259-2-cheetsheet-01.html
+++ b/project/ISO5259/5259-2-cheetsheet-01.html
@@ -227,19 +227,26 @@
             transform: rotate(180deg);
         }
 
-        /* Number Badge */
+        /* Number Badge - Square Bold Design */
         .number-badge {
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            width: 2rem;
-            height: 2rem;
-            border-radius: 50%;
+            width: 2.5rem;
+            height: 2.5rem;
+            border-radius: 0.375rem;
             background: linear-gradient(135deg, #F86825, #FF8C42);
             color: white;
-            font-weight: bold;
-            font-size: 0.875rem;
+            font-weight: 900;
+            font-size: 1.25rem;
             flex-shrink: 0;
+            box-shadow: 0 4px 6px -1px rgba(248, 104, 37, 0.3), 0 2px 4px -1px rgba(248, 104, 37, 0.2);
+            transition: all 0.3s ease;
+        }
+
+        .number-badge:hover {
+            transform: scale(1.1);
+            box-shadow: 0 10px 15px -3px rgba(248, 104, 37, 0.4), 0 4px 6px -2px rgba(248, 104, 37, 0.3);
         }
 
         /* Fade in animation */
@@ -529,6 +536,141 @@
                             <tr class="border-b"><td class="p-3"><strong>적시성<br>(Timeliness)</strong></td><td class="p-3">Tml-ML-1</td><td class="p-3">데이터 항목 적시성<br>(Timeliness of data items)</td><td class="p-3">적시성 요구사항을 충족하는 데이터 항목의 비율을 측정합니다.</td></tr>
                         </tbody>
                     </table>
+                </div>
+
+                <h3 class="themeable-heading text-2xl mt-12 mb-4">4.3. 추가 품질 특성의 심화 이해</h3>
+
+                <div class="themeable-card p-6 rounded-lg border border-orange-500/40 mb-6">
+                    <p class="text-base leading-relaxed mb-3">
+                        ISO/IEC 5259-2의 AI/ML 추가 품질 특성들은 기존 데이터 품질 표준과는 근본적으로 다른 측정 철학을 가지고 있다.
+                        이들은 <strong>데이터 생산자 관점이 아닌 소비자(사용자) 관점</strong>에서 설계되었으며,
+                        <strong>특정 AI/ML 프로젝트의 맥락(context)과 목적</strong>을 명시해야만 정확한 측정이 가능하다.
+                    </p>
+                </div>
+
+                <h4 class="themeable-heading text-xl mt-6 mb-4"><strong>4.3.1. 데이터 생산자 관점 vs. 데이터 소비자 관점</strong></h4>
+                <div class="themeable-card rounded-lg border shadow-lg my-6">
+                    <div class="overflow-x-auto">
+                        <table class="min-w-full text-sm">
+                            <thead class="border-b">
+                                <tr>
+                                    <th class="font-bold themeable-heading text-left p-3">구분</th>
+                                    <th class="font-bold themeable-heading text-left p-3">전통적 표준 (ISO/IEC 25012 등)</th>
+                                    <th class="font-bold themeable-heading text-left p-3">ISO/IEC 5259 AI/ML 특성</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr class="border-b">
+                                    <td class="p-3 align-top"><strong>주요 관점</strong></td>
+                                    <td class="p-3 align-top">데이터 생산 및 관리 관점</td>
+                                    <td class="p-3 align-top"><strong class="accent-text">데이터 소비자(AI/ML 사용자) 관점</strong></td>
+                                </tr>
+                                <tr class="border-b">
+                                    <td class="p-3 align-top"><strong>측정 초점</strong></td>
+                                    <td class="p-3 align-top">데이터 자체의 내재적 속성 (정확성, 일관성 등)</td>
+                                    <td class="p-3 align-top">특정 AI 프로젝트 요구사항 충족 여부</td>
+                                </tr>
+                                <tr class="border-b">
+                                    <td class="p-3 align-top"><strong>맥락 의존성</strong></td>
+                                    <td class="p-3 align-top">맥락 독립적 측정 가능</td>
+                                    <td class="p-3 align-top"><strong class="accent-text">사용 맥락 명시 필수</strong></td>
+                                </tr>
+                                <tr class="border-b">
+                                    <td class="p-3 align-top"><strong>평가 기준</strong></td>
+                                    <td class="p-3 align-top">데이터 생산 표준 준수 여부</td>
+                                    <td class="p-3 align-top">AI 모델 성능 및 분석 결과 품질에 대한 기여도</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <div class="themeable-card p-6 rounded-lg border border-orange-500/40 mb-6">
+                    <p class="text-sm text-gray-600 leading-relaxed">
+                        <strong class="accent-text">💡 핵심 차이점:</strong>
+                        기존 표준은 데이터 생산자가 주된 소비층이었기에 생산 관점에서 개발되었지만,
+                        AI/ML 환경에서는 <strong>데이터 사용자가 데이터를 생성하지 않고</strong> 자신의 프로젝트에 필요하다고 판단되는 데이터를 검색, 수집, 처리합니다.
+                        따라서 ISO/IEC 5259-2는 <strong>AI 모델 개발자의 요구사항을 충족</strong>하도록 설계되었습니다.
+                    </p>
+                </div>
+
+                <h4 class="themeable-heading text-xl mt-8 mb-4"><strong>4.3.2. 사용자 관점(맥락) 의존적인 측정의 필요성</strong></h4>
+                <div class="themeable-card p-6 rounded-lg mb-6">
+                    <p class="text-base leading-relaxed mb-4">
+                        추가된 AI/ML 특화 품질 특성들은 단순히 데이터 자체의 내재적 속성만을 측정하는 것이 아니라,
+                        <strong class="accent-text">데이터가 사용될 특정 맥락(context)과 목적</strong>을 명시해야만 정확한 측정이 가능합니다.
+                    </p>
+                    <div class="bg-orange-50 dark:bg-orange-900/10 rounded-lg p-4 border-l-4 border-orange-500">
+                        <p class="text-sm mb-2">
+                            <strong>데이터 품질의 정의:</strong>
+                            데이터 품질(Data Quality)은 데이터가 <strong>'특정 상황에서'</strong> 조직의 데이터 요구 사항을 충족하는 특성을 의미합니다.
+                        </p>
+                        <p class="text-sm">
+                            <strong>맥락 의존성:</strong>
+                            특정 응용 분야나 맥락에서 요구사항을 충족하는 데이터라도,
+                            <strong class="accent-text">다른 응용 분야나 맥락의 요구사항을 반드시 충족하는 것은 아닙니다.</strong>
+                        </p>
+                    </div>
+                </div>
+
+                <h4 class="themeable-heading text-xl mt-8 mb-4"><strong>4.3.3. 추가 품질 특성의 맥락 의존 사례</strong></h4>
+                <div class="overflow-x-auto themeable-card rounded-lg border shadow-lg my-6">
+                    <table class="min-w-full text-sm">
+                        <thead class="border-b">
+                            <tr>
+                                <th class="font-bold themeable-heading text-left p-3">품질 특성</th>
+                                <th class="font-bold themeable-heading text-left p-3">QM 예시</th>
+                                <th class="font-bold themeable-heading text-left p-3">맥락 의존성 설명</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="border-b">
+                                <td class="p-3 align-top"><strong class="accent-text">대표성</strong><br>(Representativeness)</td>
+                                <td class="p-3 align-top">Rep-ML-1<br>(대표성 비율)</td>
+                                <td class="p-3 align-top">
+                                    데이터셋이 <strong>'목표 모집단(Target Population)'</strong>의 관련 속성을 얼마나 반영하는지 측정.
+                                    목표 모집단은 AI 프로젝트가 추론하고자 하는 대상이므로,
+                                    <strong>사용자의 명확한 목표 없이는 측정 불가</strong>.
+                                </td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3 align-top"><strong class="accent-text">적합성</strong><br>(Relevance)</td>
+                                <td class="p-3 align-top">Rel-ML-1/2<br>(특징/레코드 적합성)</td>
+                                <td class="p-3 align-top">
+                                    <strong>'주어진 맥락(given context)'</strong>에 적합한 특징 또는 레코드의 비율 측정.
+                                    예: 신용도 예측 모델에서 키와 몸무게 특징의 적합성 판단은 <strong>모델의 목적에 따라 달라짐</strong>.
+                                </td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3 align-top"><strong class="accent-text">유효성</strong><br>(Effectiveness)</td>
+                                <td class="p-3 align-top">Eff-ML-1/2<br>(정확도/재현율 기반)</td>
+                                <td class="p-3 align-top">
+                                    데이터셋이 <strong>'특정 ML 작업에서의 사용'</strong> 요구사항을 충족하는지 측정.
+                                    동일 데이터라도 분류/회귀/클러스터링 등 작업 유형에 따라 유효성이 다름.
+                                </td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3 align-top"><strong class="accent-text">균형성</strong><br>(Balance)</td>
+                                <td class="p-3 align-top">Bal-ML-3/8<br>(클래스 균형)</td>
+                                <td class="p-3 align-top">
+                                    각 범주의 샘플 분포가 균등한 정도를 측정하지만,
+                                    <strong>불균형 허용 정도는 모델의 학습 전략</strong>(오버샘플링, 가중치 조정 등)에 따라 달라짐.
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="themeable-card p-6 rounded-lg border border-orange-500/40 mb-6">
+                    <p class="text-base leading-relaxed mb-3">
+                        <strong class="accent-text">구조적 충실도 (Structural Fidelity):</strong>
+                    </p>
+                    <p class="text-sm text-gray-600 leading-relaxed">
+                        ISO/IEC 5259-2의 추가 품질 특성들은 데이터셋이 <strong>특정 AI/ML 작업에서 성능을 달성할 수 있는 구조적 충실도</strong>를 평가합니다.
+                        이는 단순히 "좋은 데이터"를 만드는 것이 아니라,
+                        <strong>"특정 AI 프로젝트에 유용한 데이터"</strong>를 만들기 위한 평가 체계입니다.
+                        따라서 모든 측정은 <strong>사용자(소비자)가 정의한 목적과 맥락</strong>에 따라 정량화되어야 합니다.
+                    </p>
                 </div>
             </section>
 
