--- a/project/ISO5259/5259-pbls-dataclinic-02.html
+++ b/project/ISO5259/5259-pbls-dataclinic-02.html
@@ -464,17 +464,17 @@
                         <tbody>
                             <tr class="border-b">
                                 <td class="p-3 align-top" rowspan="5"><strong>내재적 품질 특성</strong><br><span class="text-xs">(데이터 자체의 본질적 속성)</span></td>
-                                <td class="p-3 align-top">정확성 (Accuracy)</td>
+                                <td class="p-3 align-top"><strong>정확성 (Accuracy)</strong></td>
                                 <td class="p-3 align-top">데이터 값과 라벨이 실제 값과 얼마나 일치하는가</td>
                                 <td class="p-3 align-top">부정확한 라벨은 모델 학습을 왜곡시킴</td>
                             </tr>
                             <tr class="border-b">
-                                <td class="p-3 align-top">완전성 (Completeness)</td>
+                                <td class="p-3 align-top"><strong>완전성 (Completeness)</strong></td>
                                 <td class="p-3 align-top">필요한 데이터와 라벨이 모두 존재하는가</td>
                                 <td class="p-3 align-top">결측치는 모델 성능 저하의 주요 원인</td>
                             </tr>
                             <tr class="border-b">
-                                <td class="p-3 align-top">일관성 (Consistency)</td>
+                                <td class="p-3 align-top"><strong>일관성 (Consistency)</strong></td>
                                 <td class="p-3 align-top">데이터 간 모순이 없고, 유사 데이터에 동일 라벨 부여</td>
                                 <td class="p-3 align-top">라벨 불일치는 모델 혼란 유발</td>
                             </tr>
@@ -772,7 +772,7 @@
                                 <td class="p-3 align-top">적합성 (Relevance)</td>
                                 <td class="p-3 align-top">Rel-ML-1, Rel-ML-2</td>
                                 <td class="p-3 align-top"><strong>Level II/III:</strong> 맥락 적합성 분석 (아웃라이어 탐지)</td>
-                                <td class="p-3 align-top"><span class="inline-block px-2 py-1 rounded text-xs bg-green-100 text-green-800">지원</span></td>
+                                <td class="p-3 align-top"><span class="inline-block px-2 py-1 rounded text-xs bg-blue-100 text-blue-800">AADS 확장</span></td>
                             </tr>
                             <tr class="border-b">
                                 <td class="p-3 align-top">유효성 (Effectiveness)</td>
@@ -807,9 +807,9 @@
                         <strong class="accent-text">핵심 통찰:</strong>
                     </p>
                     <ul class="list-disc list-inside space-y-2 ml-4">
-                        <li><strong>현재 DataClinic</strong>은 ISO/IEC 5259-2의 내재적 품질 특성 3개와 AI/ML 추가 특성 9개 중 5개를 직접 측정 및 개선 가능</li>
-                        <li><strong>AADS 확장</strong>을 통해 감사가능성, 유효성 등 2개 특성을 추가 지원 예정</li>
-                        <li><strong>향후 로드맵</strong>으로 식별가능성(PII 보호), 적시성(데이터 신선도) 기능 개발 계획</li>
+                        <li><strong>현재 DataClinic</strong>은 ISO/IEC 5259-2의 내재적 품질 특성 3개와 AI/ML 추가 특성 9개 중 4개를 직접 측정 및 개선 가능</li>
+                        <li><strong>2025년 수행중인 AADS 확장</strong>을 통해 감사가능성, 유효성 등 3개 특성을 추가중</li>
+                        <li><strong>2025년 이후 로드맵</strong>으로 식별가능성(PII 보호), 적시성(데이터 신선도) 기능 개발 예정</li>
                         <li>진단 결과에 따른 <strong>데이터 다이어트</strong>(중복 제거)와 <strong>데이터 벌크업</strong>(부족 영역 보강)은 표준이 요구하는 품질 개선 활동과 정확히 일치</li>
                     </ul>
                 </div>
@@ -1101,18 +1101,18 @@
                     참고문헌
                 </h2>
                 <div class="themeable-card p-6 rounded-lg border">
-                    <ol class="space-y-3 text-sm">
-                        <li><strong>[1]</strong> ISO/IEC JTC 1/SC 42. (2024). ISO/IEC 5259-1:2024 - Artificial intelligence — Data quality for analytics and machine learning (ML) — Part 1: Overview, terminology, and examples.</li>
-                        <li><strong>[2]</strong> ISO/IEC JTC 1/SC 42. (2024). ISO/IEC 5259-2:2024 - Part 2: Data quality measures.</li>
-                        <li><strong>[3]</strong> ISO/IEC JTC 1/SC 42. (2024). ISO/IEC 5259-3:2024 - Part 3: Data quality management requirements and guidelines.</li>
-                        <li><strong>[4]</strong> European Parliament. (2024). Regulation (EU) 2024/1689 on Artificial Intelligence (AI Act).</li>
-                        <li><strong>[5]</strong> The White House. (2023). Executive Order 14110 on Safe, Secure, and Trustworthy Artificial Intelligence.</li>
-                        <li><strong>[6]</strong> 과학기술정보통신부. (2024). 인공지능 윤리기준 및 신뢰성 확보 가이드라인.</li>
-                        <li><strong>[7]</strong> 한국지능정보사회진흥원(NIA). (2023). AI 데이터 품질관리 가이드라인 v2.0.</li>
-                        <li><strong>[8]</strong> Sambasivan, N., et al. (2021). "Everyone wants to do the model work, not the data work": Data Cascades in High-Stakes AI. CHI 2021.</li>
-                        <li><strong>[9]</strong> Gebru, T., et al. (2021). Datasheets for Datasets. Communications of the ACM, 64(12).</li>
-                        <li><strong>[10]</strong> Mitchell, M., et al. (2019). Model Cards for Model Reporting. FAT* 2019.</li>
-                    </ol>
+                    <div class="space-y-3 text-sm">
+                        <p><strong>[1]</strong> ISO/IEC JTC 1/SC 42. (2024). ISO/IEC 5259-1:2024 - Artificial intelligence — Data quality for analytics and machine learning (ML) — Part 1: Overview, terminology, and examples.</p>
+                        <p><strong>[2]</strong> ISO/IEC JTC 1/SC 42. (2024). ISO/IEC 5259-2:2024 - Part 2: Data quality measures.</p>
+                        <p><strong>[3]</strong> ISO/IEC JTC 1/SC 42. (2024). ISO/IEC 5259-3:2024 - Part 3: Data quality management requirements and guidelines.</p>
+                        <p><strong>[4]</strong> European Parliament. (2024). Regulation (EU) 2024/1689 on Artificial Intelligence (AI Act).</p>
+                        <p><strong>[5]</strong> The White House. (2023). Executive Order 14110 on Safe, Secure, and Trustworthy Artificial Intelligence.</p>
+                        <p><strong>[6]</strong> 과학기술정보통신부. (2024). 인공지능 윤리기준 및 신뢰성 확보 가이드라인.</p>
+                        <p><strong>[7]</strong> 한국지능정보사회진흥원(NIA). (2023). AI 데이터 품질관리 가이드라인 v2.0.</p>
+                        <p><strong>[8]</strong> Sambasivan, N., et al. (2021). "Everyone wants to do the model work, not the data work": Data Cascades in High-Stakes AI. CHI 2021.</p>
+                        <p><strong>[9]</strong> Gebru, T., et al. (2021). Datasheets for Datasets. Communications of the ACM, 64(12).</p>
+                        <p><strong>[10]</strong> Mitchell, M., et al. (2019). Model Cards for Model Reporting. FAT* 2019.</p>
+                    </div>
                 </div>
             </section>
 
