--- a/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
+++ b/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
@@ -128,6 +128,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
 
+    <!-- Common Styles -->
+    <link rel="stylesheet" href="/styles/common-styles.css">
+
     <style>
         :root {
             /* Dark Theme (default) */
@@ -224,7 +227,7 @@
         /* Interactive Cards */
         .interactive-card {
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            border-left: 4px solid transparent;
+            border-left: 4px solid var(--border-color);
         }
 
         .interactive-card:hover {
@@ -253,7 +256,7 @@
         /* Statistics Card */
         .stat-card {
             position: relative;
-            overflow: hidden;
+            overflow: visible;
         }
 
         .stat-card::before {
@@ -264,6 +267,7 @@
             width: 4px;
             height: 100%;
             background: linear-gradient(180deg, var(--accent-color), var(--teal-color));
+            border-radius: 2px 0 0 2px;
         }
 
         /* Timeline */
@@ -327,18 +331,20 @@
             background: linear-gradient(135deg, var(--bg-secondary) 0%, var(--bg-card) 100%);
             border: 2px solid var(--border-color);
             position: relative;
-            overflow: hidden;
+            overflow: visible;
         }
 
         .pdf-download-card::before {
             content: '';
             position: absolute;
-            top: -50%;
-            right: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(circle, rgba(248, 104, 37, 0.1) 0%, transparent 70%);
+            top: 50%;
+            right: 50%;
+            transform: translate(50%, -50%);
+            width: 150%;
+            height: 150%;
+            background: radial-gradient(circle, rgba(248, 104, 37, 0.08) 0%, transparent 60%);
             animation: pulse 3s ease-in-out infinite;
+            z-index: 0;
         }
 
         @keyframes pulse {
@@ -541,12 +547,12 @@
             <h3 class="font-bold themeable-heading mb-4 text-lg">목차</h3>
             <ul id="toc-links" class="space-y-3 text-sm border-l-2 themeable-toc-border">
                 <li><a href="#summary" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">Executive Summary</a></li>
-                <li><a href="#requirements" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">데이터 요구사항</a></li>
-                <li><a href="#global-trends" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">글로벌 동향</a></li>
-                <li><a href="#data-quality" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">데이터 품질 관리</a></li>
-                <li><a href="#ai-ready-data" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">AI-Ready Data</a></li>
-                <li><a href="#pebblous-solutions" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">페블러스 솔루션</a></li>
-                <li><a href="#conclusion" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">결론 및 제언</a></li>
+                <li><a href="#requirements" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link"><span class="toc-number themeable-text-muted font-bold">1.</span> 데이터 요구사항</a></li>
+                <li><a href="#global-trends" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link"><span class="toc-number themeable-text-muted font-bold">2.</span> 글로벌 동향</a></li>
+                <li><a href="#data-quality" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link"><span class="toc-number themeable-text-muted font-bold">3.</span> 데이터 품질 관리</a></li>
+                <li><a href="#ai-ready-data" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link"><span class="toc-number themeable-text-muted font-bold">4.</span> AI-Ready Data</a></li>
+                <li><a href="#pebblous-solutions" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link"><span class="toc-number themeable-text-muted font-bold">5.</span> 페블러스 솔루션</a></li>
+                <li><a href="#conclusion" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link"><span class="toc-number themeable-text-muted font-bold">6.</span> 결론 및 제언</a></li>
                 <li><a href="#pdf-download" class="block pl-4 -ml-px border-l-2 border-transparent hover:border-orange-500 themeable-toc-link">PDF 다운로드</a></li>
             </ul>
         </nav>
@@ -556,7 +562,7 @@
 
         <!-- Hero Section -->
         <header class="text-center mb-16">
-            <h1 class="text-4xl md:text-5xl font-bold themeable-heading mb-6 leading-tight" style="line-height: 1.4;">
+            <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-6 leading-tight" style="line-height: 1.4;">
                 피지컬 AI 시대의 도래:<br>제조 혁신을 위한 데이터 전략
             </h1>
             <p class="text-xl themeable-muted mb-4">AI-Ready Data를 통한 글로벌 제조 경쟁력 확보 방안</p>
@@ -644,7 +650,10 @@
 
         <!-- Data Requirements Section -->
         <section id="requirements" class="mb-16 fade-in-card">
-            <h2 class="text-3xl font-bold themeable-heading mb-8">피지컬 AI의 데이터 요구사항: 무엇이 다른가?</h2>
+            <div class="flex items-center gap-4 mb-8">
+                <span class="number-badge">1</span>
+                <h2 class="text-3xl font-bold themeable-heading">피지컬 AI의 데이터 요구사항: 무엇이 다른가?</h2>
+            </div>
 
             <div class="themeable-text mb-8 leading-relaxed">
                 <p>
@@ -729,7 +738,10 @@
 
         <!-- Global Trends Section -->
         <section id="global-trends" class="mb-16 fade-in-card">
-            <h2 class="text-3xl font-bold themeable-heading mb-8">글로벌 선도 기업 동향: 피지컬 AI를 향한 경쟁</h2>
+            <div class="flex items-center gap-4 mb-8">
+                <span class="number-badge">2</span>
+                <h2 class="text-3xl font-bold themeable-heading">글로벌 선도 기업 동향: 피지컬 AI를 향한 경쟁</h2>
+            </div>
 
             <p class="themeable-text mb-8 leading-relaxed">
                 글로벌 선도 기업들은 이미 Physical AI와 이를 위한 데이터 인프라에 막대한 투자를 집행하고 있습니다.
@@ -820,7 +832,10 @@
 
         <!-- Data Quality Section -->
         <section id="data-quality" class="mb-16 fade-in-card">
-            <h2 class="text-3xl font-bold themeable-heading mb-8">데이터 품질 관리: Physical AI의 성패를 가르는 기준</h2>
+            <div class="flex items-center gap-4 mb-8">
+                <span class="number-badge">3</span>
+                <h2 class="text-3xl font-bold themeable-heading">데이터 품질 관리: Physical AI의 성패를 가르는 기준</h2>
+            </div>
 
             <div class="themeable-card rounded-xl p-8 md:p-10 mb-8">
                 <div class="text-center mb-8">
@@ -907,7 +922,10 @@
 
         <!-- AI-Ready Data Section -->
         <section id="ai-ready-data" class="mb-16 fade-in-card">
-            <h2 class="text-3xl font-bold themeable-heading mb-8">AI-Ready Data: Physical AI를 위한 고순도 데이터</h2>
+            <div class="flex items-center gap-4 mb-8">
+                <span class="number-badge">4</span>
+                <h2 class="text-3xl font-bold themeable-heading">AI-Ready Data: Physical AI를 위한 고순도 데이터</h2>
+            </div>
 
             <div class="themeable-text mb-8 leading-relaxed">
                 <p class="text-lg">
@@ -956,7 +974,10 @@
 
         <!-- Pebblous Solutions Section -->
         <section id="pebblous-solutions" class="mb-16 fade-in-card">
-            <h2 class="text-3xl font-bold themeable-heading mb-8">페블러스(Pebblous)의 제안: Physical AI를 위한 데이터 솔루션</h2>
+            <div class="flex items-center gap-4 mb-8">
+                <span class="number-badge">5</span>
+                <h2 class="text-3xl font-bold themeable-heading">페블러스(Pebblous)의 제안: Physical AI를 위한 데이터 솔루션</h2>
+            </div>
 
             <div class="themeable-text mb-10 leading-relaxed">
                 <p class="text-lg">
@@ -1091,7 +1112,10 @@
 
         <!-- Conclusion & Call to Action -->
         <section id="conclusion" class="mb-16 fade-in-card">
-            <h2 class="text-3xl font-bold themeable-heading mb-8">결론 및 제언: 지금 바로 '데이터 건강검진'이 필요합니다</h2>
+            <div class="flex items-center gap-4 mb-8">
+                <span class="number-badge">6</span>
+                <h2 class="text-3xl font-bold themeable-heading">결론 및 제언: 지금 바로 '데이터 건강검진'이 필요합니다</h2>
+            </div>
 
             <div class="themeable-card rounded-xl p-8 md:p-10 mb-8">
                 <p class="text-lg themeable-text leading-relaxed mb-6">
@@ -1179,12 +1203,12 @@
         <h3 class="font-bold themeable-heading mb-4 text-lg">목차</h3>
         <ul id="mobile-toc-links" class="space-y-3 text-sm">
             <li><a href="#summary" class="block themeable-toc-link mobile-toc-item">Executive Summary</a></li>
-            <li><a href="#requirements" class="block themeable-toc-link mobile-toc-item">데이터 요구사항</a></li>
-            <li><a href="#global-trends" class="block themeable-toc-link mobile-toc-item">글로벌 동향</a></li>
-            <li><a href="#data-quality" class="block themeable-toc-link mobile-toc-item">데이터 품질 관리</a></li>
-            <li><a href="#ai-ready-data" class="block themeable-toc-link mobile-toc-item">AI-Ready Data</a></li>
-            <li><a href="#pebblous-solutions" class="block themeable-toc-link mobile-toc-item">페블러스 솔루션</a></li>
-            <li><a href="#conclusion" class="block themeable-toc-link mobile-toc-item">결론 및 제언</a></li>
+            <li><a href="#requirements" class="block themeable-toc-link mobile-toc-item"><span class="toc-number themeable-text-muted font-bold">1.</span> 데이터 요구사항</a></li>
+            <li><a href="#global-trends" class="block themeable-toc-link mobile-toc-item"><span class="toc-number themeable-text-muted font-bold">2.</span> 글로벌 동향</a></li>
+            <li><a href="#data-quality" class="block themeable-toc-link mobile-toc-item"><span class="toc-number themeable-text-muted font-bold">3.</span> 데이터 품질 관리</a></li>
+            <li><a href="#ai-ready-data" class="block themeable-toc-link mobile-toc-item"><span class="toc-number themeable-text-muted font-bold">4.</span> AI-Ready Data</a></li>
+            <li><a href="#pebblous-solutions" class="block themeable-toc-link mobile-toc-item"><span class="toc-number themeable-text-muted font-bold">5.</span> 페블러스 솔루션</a></li>
+            <li><a href="#conclusion" class="block themeable-toc-link mobile-toc-item"><span class="toc-number themeable-text-muted font-bold">6.</span> 결론 및 제언</a></li>
             <li><a href="#pdf-download" class="block themeable-toc-link mobile-toc-item">PDF 다운로드</a></li>
         </ul>
     </nav>
@@ -1206,7 +1230,11 @@
     <script>
         document.addEventListener('DOMContentLoaded', async function() {
             const config = {
-                pageTitle: "Physical AI 시대의 도래: 제조 혁신을 위한 데이터 전략 | Pebblous Blog",
+                mainTitle: "피지컬 AI 시대의 도래:",
+                subtitle: "제조 혁신을 위한 데이터 전략",
+                pageTitle: "피지컬 AI 시대의 도래: 제조 혁신을 위한 데이터 전략 | Pebblous Blog",
+                publishDate: "2025년 11월 6일",
+                publisher: "페블러스 데이터 커뮤니케이션 팀",
                 defaultTheme: "light",
 
                 // SEO Phase 2: Related Posts & Breadcrumbs
