--- a/index.html
+++ b/index.html
@@ -1172,13 +1172,17 @@
                 };
 
                 return `
-                    <div class="bg-slate-900/50 p-4 rounded-lg border border-slate-700 hover:border-orange-500 transition-colors">
+                    <div class="search-result-item bg-slate-900/50 p-4 rounded-lg border border-slate-700 hover:border-orange-500 transition-colors">
                         <div class="flex items-start justify-between gap-4">
-                            <div class="flex-grow">
-                                <div class="flex items-center gap-2 mb-2">
-                                    ${tagsHtml}
-                                    <span class="text-xs text-slate-500">${article.date}</span>
-                                    <span class="text-xs text-slate-500">• ${categoryName}</span>
+                            <div class="flex-grow min-w-0">
+                                <div class="tags-container mb-3">
+                                    <div class="tags-scroll">
+                                        ${tagsHtml}
+                                    </div>
+                                </div>
+                                <div class="flex flex-wrap items-center gap-2 text-xs text-slate-500 mb-2">
+                                    <span>${article.date}</span>
+                                    <span>• ${categoryName}</span>
                                 </div>
                                 <h4 class="text-lg font-bold text-white mb-2">${highlightText(article.title)}</h4>
                                 <p class="text-sm text-slate-400">${highlightText(article.description)}</p>
@@ -1192,6 +1196,11 @@
             }).join('');
 
             resultsSection.classList.add('has-results');
+
+            const searchResultCards = Array.from(resultsContainer.querySelectorAll('.search-result-item'));
+            if (searchResultCards.length > 0) {
+                initCardInteractions(searchResultCards);
+            }
         }
 
         // Statistics Modal Functions
