--- a/project/SyntheticData/synthetic-data-pricing-01.html
+++ b/project/SyntheticData/synthetic-data-pricing-01.html
@@ -21,7 +21,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://blog.pebblous.ai/project/SyntheticData/synthetic-data-pricing-01.html">
-    <meta property="og:title" content="2025년 글로벌 합성데이터 가격 전략 분석 | 페블러스 DataClinic">
+    <meta property="og:title" content="합성 데이터 가격의 진실: '데이터'가 아니라 '가치'를 산다 | 페블러스 DataClinic">
     <meta property="og:description" content="정밀타기팅 합성데이터(Hyper Synthetic Data)로 데이터 품질을 혁신하세요. 페블러스 DataClinic이 제공하는 데이터 다이어트와 벌크업 솔루션으로 AI-Ready Data를 완성합니다.">
     <meta property="og:image" content="https://blog.pebblous.ai/project/SyntheticData/image/synthetic-data-pricing-01.png">
     <meta property="og:image:width" content="1200">
@@ -35,7 +35,7 @@
     <meta name="twitter:site" content="@pebblous">
     <meta name="twitter:creator" content="@pebblous">
     <meta name="twitter:url" content="https://blog.pebblous.ai/project/SyntheticData/synthetic-data-pricing-01.html">
-    <meta name="twitter:title" content="2025년 글로벌 합성데이터 가격 전략 분석 | 페블러스 DataClinic">
+    <meta name="twitter:title" content="합성 데이터 가격의 진실: '데이터'가 아니라 '가치'를 산다 | 페블러스 DataClinic">
     <meta name="twitter:description" content="정밀타기팅 합성데이터(Hyper Synthetic Data)로 데이터 품질을 혁신하세요. LLM 합성데이터부터 Physical AI 데이터까지 모달리티별 최적화 솔루션.">
     <meta name="twitter:image" content="https://blog.pebblous.ai/project/SyntheticData/image/synthetic-data-pricing-01.png">
     <meta name="twitter:image:alt" content="2025년 글로벌 합성데이터 가격 전략 분석 - 페블러스 DataClinic">
@@ -61,7 +61,7 @@
     <link rel="alternate" hreflang="en" href="https://blog.pebblous.ai/project/SyntheticData/synthetic-data-pricing-01.html">
     <link rel="alternate" hreflang="x-default" href="https://blog.pebblous.ai/project/SyntheticData/synthetic-data-pricing-01.html">
 
-    <title id="page-title">2025년 글로벌 합성데이터 가격 전략 분석 | 페블러스 DataClinic</title>
+    <title id="page-title">합성 데이터 가격의 진실: '데이터'가 아니라 '가치'를 산다 | 페블러스 DataClinic</title>
 
     <!-- Favicon -->
     <link rel="icon" href="/image/favicon.ico" sizes="any">
@@ -1260,11 +1260,11 @@
     <script>
         document.addEventListener('DOMContentLoaded', async function() {
             const config = {
-                mainTitle: "2025년 글로벌 합성데이터 가격 전략 분석",
-                subtitle: "모달리티, 플랫폼, 그리고 가치 기반 서비스의 경제학",
+                mainTitle: "합성 데이터 가격의 진실: '데이터'가 아니라 '가치'를 산다",
+                subtitle: "2025년 글로벌 합성 데이터 가격 전략 및 3중 요금제 분석",
                 publishDate: "2025년 11월 7일",
                 publisher: "(주)페블러스 데이터 커뮤니케이션팀",
-                pageTitle: "2025년 글로벌 합성데이터 가격 전략 분석 | Pebblous Blog",
+                pageTitle: "합성 데이터 가격의 진실: '데이터'가 아니라 '가치'를 산다 | Pebblous Blog",
                 defaultTheme: "light",
                 commentsMessage: "합성데이터 가격 정책에 대한 질문이나 의견이 있으신가요?",
                 // SEO Phase 2: Breadcrumbs & Related Posts
